feat: Bump go and update swagger specs and docs
